2008-10-02  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (DEC_PENDING): send packet in the queue when no
	pending tasks.
	(_find_packet_to_receive): new.
	(_find_packet_to_send): new.
	(xim_proxy_client_protocol_real_xim_set_ic_values_reply): do not send
	back an event to the client if it's a reply for delayed packet.
	(xim_proxy_protocol_real_xim_set_ic_values): put the packet into
	the queue and just send back a reply if waiting for any synchronous
	event.

2008-10-01  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (_INC_PENDING): manage the pending tasks
	strictly.
	(_DEC_PENDING): likewise.
	(_find_reply): new.

2008-09-29  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_values):
	Fix a typo and memory leak.

2008-09-25  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (notify_notification): set urgency.
	(_setup_acceleration_key): don't process if accel key is "disabled".

	* applet/imsettings-applet.schemas.in: Escape characters reserved for
	markup language.

2008-09-24  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: check whether or not gconftool-2 is available.

	* tests/main.c (imsettings_test_restart_daemons_full): bring up
	im-settings-daemon in the tree as well.

	* src/factory.c (imsettings_manager_real_what_im_is_running): 
	return NULL if no info object available.

	* imsettings/imsettings-request.c (imsettings_request_get_info_object):
	return NULL if no info object available.

	* imsettings/imsettings-observer.c (imsettings_get_info_object): send
	an empty GString if no info object available.

	* applet/Makefile.am: ship and install imsettings-applet.schemas.

2008-09-21  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): 
	just send back a key event if input-context is invalid. (rhbz#462899)

2008-09-15  Akira TAGOH  <tagoh@redhat.com>

	* README: Update.

	* data/none.in.in (GTK_IM_MODULE): set gtk-im-context-simple for default.